PySCF 1.5 alpha (2018-03-21)
----------------------------
* Added
  - ddCOSMO solvent model
  - VV10 NLC functional for finite size systems
  - range-separated hybrid features for RKS and UKS, including
    > Analytical nuclear gradients
    > Second order SCF
    > Hessian and frequency
    > TDDFT
    > TDDFT gradients
    > NMR
  - IBO for molecular and PBC systems
  - UHF analytical nuclear Hessian
  - UKS analytical nuclear Hessian
  - FFT for low-dimension (2D) PBC systems
  - Generalized CCSD (GCCSD)
  - Generalized CCSD lambda solver
  - Generalized Hartree-Fock with PBC
  - k-point GCCSD and RCCSD with PBC
  - k-point GCCSD(T) and RCCSD(T) with PBC
  - RCCSD(T) and UCCSD(T) for non-canonical HF orbitals
  - RCISD and UCISD analytical nuclear gradients
  - RMP2 and UMP2 analytical nuclear gradients
  - UCCSD analytical nuclear gradients
  - Frozen orbitals in MP2, CISD, CCSD, CCSD(T) nuclear gradients
  - SF-X2C-1E analytical nuclear gradients
  - SF-X2C-1E analytical nuclear hessian
  - Analytical nuclear gradients and hessian for ECP integrals
  - GIAO-ECP integrals for NMR shielding
  - Interface to pyWannier90
  - Restricted MP2 with k-point sampling
  - RCCSD(T), UCCSD(T) and GCCSD(T) density matrices
  - RCCSD(T), UCCSD(T) analytical nuclear gradients
  - CASCI/CASSCF analytical nuclear gradients
  - Cartesian GTO (6d 10f) basis in PBC calculations
  - Natural transition orbital analysis
  - direct-RPA (no exchange, aka TDH)
  - direct-TDA (TDA without exchange)
* Improved
  - Supported to set omp threads in FCI solver
  - Supported even number of grids in pbc calculations
  - Performance of UCCSD lambda solver
  - The function to make SCF initial guess from the chkfile of the
    molecule with different geometry
  - The mcscf natural orbitals in the state-average calculation
  - Performance of ECP integrals
  - Prescreening for PBC 3-center integrals
  - Performance and memory efficiency of G0W0
  - KMP2 memory efficiency